final small edits

--- a/publicV1/css/styles.css
+++ b/publicV1/css/styles.css
@@ -11479,7 +11479,7 @@ footer.footer .social-link:hover {
   display: table;
   width: 100%;
   /*height: auto;*/
-  padding-top: 0;
+  padding-top: 1rem;
   padding-bottom: 2rem;
   /* background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../assets/img/bg-masthead.jpg"); */
   background-position: center center;
